objects/Default_Distribution_Date__mdt.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GA__c</fullName>
        <label>GA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Producer__c</fullName>
        <label>Producer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Default Distribution Date</label>
    <pluralLabel>Default Distribution Dates</pluralLabel>
</CustomObject>